tests/paczka1/fuzzy1/56122355.err
Error in line 17: yLybsJFB A21C 4,C
Error in line 20: npx S153 95,7
Error in line 24: VvOu9 S142 23,64
Error in line 31: A213 S142 96,0
Error in line 34: gDs3Uax A213 4,9
Error in line 19: yLybsJFB A65 89,6
